engine/baml-lib/baml/tests/validation_files/headers/invalid.err
error: Statement must end with a semicolon.
  -->  tests/validation_files/headers/invalid.baml:12
   | 
11 | function MixedOnSameLine() -> string {
12 |     let x = "hello" ## Inline Header // Should fail
   | 
error: Statement must end with a semicolon.
  -->  tests/validation_files/headers/invalid.baml:18
   | 
17 |     //#No Space After Hash // Should potentially fail depending on grammar rules
18 |     let x = "test"
19 |     x
   | 
error: Statement must end with a semicolon.
  -->  tests/validation_files/headers/invalid.baml:25
   | 
24 |     // Empty header title - this should fail
25 |     let x = "test"
26 |     //##
   | 
error: Error validating: This line is not a valid field or attribute definition. A valid property may look like: 'myProperty "some value"' for example, with no colons.
  -->  tests/validation_files/headers/invalid.baml:33
   | 
32 | function HeaderInExpression() -> string {
33 |     let x = "start" + # Middle Header // Should fail
34 |         "end"
   | 
error: Error validating: This line is not a valid field or attribute definition. A valid property may look like: 'myProperty "some value"' for example, with no colons.
  -->  tests/validation_files/headers/invalid.baml:34
   | 
33 |     let x = "start" + # Middle Header // Should fail
34 |         "end"
35 |     x
   | 
error: Error validating Function "HeaderInExpression": This field declaration is invalid. It is either missing a name or a type.
  -->  tests/validation_files/headers/invalid.baml:35
   | 
34 |         "end"
35 |     x
   | 
error: Statement must end with a semicolon.
  -->  tests/validation_files/headers/invalid.baml:39
   | 
38 | function HeaderInStringLiteral() -> string {
39 |     let x = "This string contains # Header Text"
40 |     let y = #"
   | 
error: Statement must end with a semicolon.
  -->  tests/validation_files/headers/invalid.baml:40
   | 
39 |     let x = "This string contains # Header Text"
40 |     let y = #"
41 |         Raw string with # Header
42 |         Should not be parsed
43 |     "#
44 |     x + y
   | 
